--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-curl": "*",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^9.51",
         "laravel/sanctum": "^3.2",
