--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
         "chart.js": "^4.2.1",
-        "lightweight-charts": "^4.0.1",
-        "toastify-js": "^1.12.0",
-        "vue-chartjs": "^5.2.0"
+        "toastify-js": "^1.12.0"
     }
 }
